--- a/webroot/scss/Pages/_tickets.scss
+++ b/webroot/scss/Pages/_tickets.scss
@@ -37,8 +37,8 @@
         .ticket-title{
             .ticket-title-icon{
                 margin-top: 10px;
-                .fa{
-                    color: #4C4C4C;
+                .fa:last-child{
+                    color: #9C9C9C;
                 }
                 span{
                     font-size: 20px;
