--- a/webroot/scss/style.scss
+++ b/webroot/scss/style.scss
@@ -17,6 +17,7 @@
 @import "Module/_tab.scss";
 @import "Module/_table.scss";
 @import "Module/_flash.scss";
+@import "Module/_emoji.scss";
 @import "Module/_paginate.scss";
 
 /****************** PAGES *****************/
