--- a/webroot/scss/Base/_config.scss
+++ b/webroot/scss/Base/_config.scss
@@ -19,7 +19,7 @@
 
 // Colors (btn, form)
 //--------------------------------------------------
-	$primary:         #2C3E50 !default; // #337ab7
+	$primary:         #2C3E50 !default;
 	$success:         #5cb85c !default;
 	$info:            #52B3D9 !default;
 	$warning:         #F89406 !default;
