Vérification du contenu

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3460,6 +3460,11 @@ footer p {
   cursor: pointer;
   outline: none;
 }
+.btn:disabled {
+  background: #c8c8c8 !important;
+  border: solid 1px #c8c8c8 !important;
+  cursor: not-allowed;
+}
 .btn:last-child {
   margin-right: 30px;
 }
@@ -3476,8 +3481,8 @@ footer p {
   border: solid 1px #C5201B !important;
 }
 .btn.btn-success {
-  background-color: #5cb85c !important;
-  border: solid 1px #5cb85c !important;
+  background-color: #5cb85c;
+  border: solid 1px #5cb85c;
 }
 .btn.btn-primary {
   background-color: #2C3E50 !important;
@@ -3488,6 +3493,9 @@ footer p {
   border: solid 1px #52B3D9 !important;
 }
 
+/**
+ * SMALL BUTTON
+ **/
 .btn-small {
   padding: 0px 4px;
   color: #fff;
