--- a/webroot/scss/Base/_base.scss
+++ b/webroot/scss/Base/_base.scss
@@ -34,9 +34,9 @@ h1,h2,h3,h4,h5{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	padding-bottom: 13px;
-	background-color: rgb(27, 28, 29);
+	//background-color: rgb(27, 28, 29);
 	padding-top: 10px;
-	color: $orange;
+	color: rgb(27, 28, 29);
 }
 
 .main-desc{
