--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -47,8 +47,25 @@ h1, h2, h3, h4, h5 {
   font-weight: 300;
 }
 
-.trumbowyg-box {
-  width: 100% !important;
+.no-js #loader {
+  display: none;
+}
+
+.js #loader {
+  display: block;
+  position: absolute;
+  left: 100px;
+  top: 0;
+}
+
+.se-pre-con {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(images/loader-64x/Preloader_2.gif) center no-repeat #fff;
 }
 
 /*********************************************************************************************
