--- a/webroot/scss/style.scss
+++ b/webroot/scss/style.scss
@@ -7,6 +7,7 @@
 /****************** LAYOUT *****************/
 @import "Layout/_header.scss";
 @import "Layout/_footer.scss";
+@import "Layout/_sidebar.scss";
 
 /****************** MODULE *****************/
 @import "Module/_modal.scss";
