--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3468,37 +3468,66 @@ footer p {
 }
 
 /* line 1, ../scss/Layout/_sidebar.scss */
+.sidebar--trigger {
+  display: inline;
+  height: inherit;
+  line-height: 50px;
+  cursor: pointer !important;
+}
+/* line 7, ../scss/Layout/_sidebar.scss */
+.sidebar--trigger a {
+  cursor: pointer !important;
+}
+
+/* line 12, ../scss/Layout/_sidebar.scss */
 .sidebar {
   position: fixed;
   top: 0px;
   bottom: 0px;
-  right: 0px;
+  right: -300px;
   width: 300px;
   z-index: 1000;
   background-color: #1B1C1D;
   border-left: 3px solid #FFF;
+  transition: left 0.3s;
 }
-/* line 11, ../scss/Layout/_sidebar.scss */
+/* line 24, ../scss/Layout/_sidebar.scss */
+.sidebar.sidebar-animation {
+  right: 0 !important;
+}
+/* line 28, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-close {
+  right: 0;
+  position: absolute;
+  padding: 5px 15px;
+  font-size: 23px;
+  cursor: pointer !important;
+}
+/* line 35, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-close a {
+  cursor: pointer !important;
+}
+/* line 40, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar {
   text-align: center;
   margin-top: 30px;
   color: #FF6814;
 }
-/* line 16, ../scss/Layout/_sidebar.scss */
+/* line 45, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar img {
   border-radius: 50%;
 }
-/* line 19, ../scss/Layout/_sidebar.scss */
+/* line 48, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar .sidebar-name {
   text-align: center;
   font-size: 35px;
   font-weight: 200;
 }
-/* line 25, ../scss/Layout/_sidebar.scss */
+/* line 54, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu {
   margin-top: 20px;
 }
-/* line 28, ../scss/Layout/_sidebar.scss */
+/* line 57, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a {
   text-transform: uppercase;
   display: block;
@@ -3510,13 +3539,13 @@ footer p {
   font-weight: 600;
   text-align: center;
 }
-/* line 40, ../scss/Layout/_sidebar.scss */
+/* line 69, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a:hover {
   text-decoration: none;
   background-color: #0C0C0C;
   color: #fff;
 }
-/* line 48, ../scss/Layout/_sidebar.scss */
+/* line 77, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer {
   bottom: 0;
   width: 100%;
@@ -3524,7 +3553,7 @@ footer p {
   font-weight: 500;
   text-transform: uppercase;
 }
-/* line 54, ../scss/Layout/_sidebar.scss */
+/* line 83, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco {
   background-color: #C51F1F;
   color: white;
@@ -3532,15 +3561,15 @@ footer p {
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 61, ../scss/Layout/_sidebar.scss */
+/* line 90, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco a {
   color: #fff;
 }
-/* line 64, ../scss/Layout/_sidebar.scss */
+/* line 93, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco a:hover {
   text-decoration: none;
 }
-/* line 70, ../scss/Layout/_sidebar.scss */
+/* line 99, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin {
   background-color: #2b2c2d;
   color: #FFF;
@@ -3548,11 +3577,11 @@ footer p {
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 77, ../scss/Layout/_sidebar.scss */
+/* line 106, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin a {
   color: #fff;
 }
-/* line 79, ../scss/Layout/_sidebar.scss */
+/* line 108, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin a:hover {
   text-decoration: none;
 }
