--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3487,15 +3487,18 @@ footer p {
   right: -300px;
   width: 300px;
   z-index: 1000;
-  background-color: #1B1C1D;
-  border-left: 3px solid #FFF;
+  background-color: #D9D9D9;
   transition: left 0.3s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
-/* line 24, ../scss/Layout/_sidebar.scss */
+/* line 25, ../scss/Layout/_sidebar.scss */
 .sidebar.sidebar-animation {
   right: 0 !important;
 }
-/* line 28, ../scss/Layout/_sidebar.scss */
+/* line 29, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-close {
   right: 0;
   position: absolute;
@@ -3503,49 +3506,49 @@ footer p {
   font-size: 23px;
   cursor: pointer !important;
 }
-/* line 35, ../scss/Layout/_sidebar.scss */
+/* line 36, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-close a {
   cursor: pointer !important;
 }
-/* line 40, ../scss/Layout/_sidebar.scss */
+/* line 41, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar {
   text-align: center;
   margin-top: 30px;
   color: #FF6814;
 }
-/* line 45, ../scss/Layout/_sidebar.scss */
+/* line 46, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar img {
   border-radius: 50%;
 }
-/* line 48, ../scss/Layout/_sidebar.scss */
+/* line 49, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar .sidebar-name {
   text-align: center;
   font-size: 35px;
   font-weight: 200;
 }
-/* line 54, ../scss/Layout/_sidebar.scss */
+/* line 55, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu {
   margin-top: 20px;
 }
-/* line 57, ../scss/Layout/_sidebar.scss */
+/* line 58, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a {
   text-transform: uppercase;
   display: block;
-  border-top: solid 1px #333;
+  border-top: solid 1px #888888;
   letter-spacing: 2px;
   height: 50px;
-  color: #CBCBCB;
+  color: #4B4B4B;
   line-height: 50px;
   font-weight: 600;
   text-align: center;
 }
-/* line 69, ../scss/Layout/_sidebar.scss */
+/* line 70, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a:hover {
   text-decoration: none;
-  background-color: #0C0C0C;
+  background-color: #B3B3B3;
   color: #fff;
 }
-/* line 77, ../scss/Layout/_sidebar.scss */
+/* line 78, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer {
   bottom: 0;
   width: 100%;
@@ -3553,7 +3556,7 @@ footer p {
   font-weight: 500;
   text-transform: uppercase;
 }
-/* line 83, ../scss/Layout/_sidebar.scss */
+/* line 84, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco {
   background-color: #C51F1F;
   color: white;
@@ -3561,15 +3564,15 @@ footer p {
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 90, ../scss/Layout/_sidebar.scss */
+/* line 91, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco a {
   color: #fff;
 }
-/* line 93, ../scss/Layout/_sidebar.scss */
+/* line 94, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-deco a:hover {
   text-decoration: none;
 }
-/* line 99, ../scss/Layout/_sidebar.scss */
+/* line 100, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin {
   background-color: #2b2c2d;
   color: #FFF;
@@ -3577,11 +3580,11 @@ footer p {
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 106, ../scss/Layout/_sidebar.scss */
+/* line 107, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin a {
   color: #fff;
 }
-/* line 108, ../scss/Layout/_sidebar.scss */
+/* line 109, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a-admin a:hover {
   text-decoration: none;
 }
