--- a/webroot/scss/Layout/_sidebar.scss
+++ b/webroot/scss/Layout/_sidebar.scss
@@ -17,9 +17,10 @@
   //right: 0px;
   width: 300px;
   z-index: 1000;
-  background-color: $black;
-  border-left: 3px solid #FFF;
+  background-color: #D9D9D9; //$black;
+  //border-left: 3px solid #FFF;
   transition: left 0.3s;
+  @include transition(0.6s);
 
   &.sidebar-animation{
     right:0!important;
@@ -57,10 +58,10 @@
     a{
       text-transform: uppercase;
       display: block;
-      border-top: solid 1px #333;
+      border-top: solid 1px #888888;
       letter-spacing: 2px;
       height: 50px;
-      color: #CBCBCB;
+      color: #4B4B4B; //#CBCBCB;
       line-height: 50px;
       font-weight: 600;
 
@@ -68,7 +69,7 @@
 
       &:hover{
         text-decoration: none;
-        background-color: #0C0C0C;
+        background-color: #B3B3B3; //#0C0C0C;
         color: #fff;
       }
     }
