--- a/webroot/scss/Layout/_sidebar.scss
+++ b/webroot/scss/Layout/_sidebar.scss
@@ -14,11 +14,10 @@
   top: 0px;
   bottom: 0px;
   right: -300px;
-  //right: 0px;
   width: 300px;
   z-index: 1000;
-  background-color: #D9D9D9; //$black;
-  //border-left: 3px solid #FFF;
+  background-color: $black;
+  border-left: 3px solid rgba(29, 29, 29, 0.78);
   transition: left 0.3s;
   @include transition(0.6s);
 
@@ -53,7 +52,6 @@
     }
   }
   .sidebar-menu{
-    //border-top: 2px solid #808080;
     margin-top: 20px;
     a{
       text-transform: uppercase;
@@ -61,7 +59,7 @@
       border-top: solid 1px #888888;
       letter-spacing: 2px;
       height: 50px;
-      color: #4B4B4B; //#CBCBCB;
+      color: #CBCBCB;
       line-height: 50px;
       font-weight: 600;
 
@@ -69,7 +67,7 @@
 
       &:hover{
         text-decoration: none;
-        background-color: #B3B3B3; //#0C0C0C;
+        background-color: #0C0C0C;
         color: #fff;
       }
     }
