--- a/webroot/scss/Pages/_profil.scss
+++ b/webroot/scss/Pages/_profil.scss
@@ -38,13 +38,22 @@
 
         span{
             color: $orange;
-            font-size: 13px!important;
+            font-size: 15px!important;
             text-transform: uppercase;
-            font-weight: 300;
+            font-weight: 500;
         }
         .profil-stats{
             text-align: center;
             margin-top: -40px;
+        }
+
+        .profil-img{
+            display: none;
+        }
+        .profil-name{
+            h2{
+                margin-top: -110px;
+            }
         }
     }
 }
