--- a/webroot/scss/Module/_label.scss
+++ b/webroot/scss/Module/_label.scss
@@ -15,7 +15,9 @@
 .label-success{ }
 .label-warning{ }
 .label-info{ }
-.label-danger{ }
+.label-danger {
+    background-color: #D64541;
+}
 
 
 .label-notif{
