--- a/webroot/scss/Base/_config.scss
+++ b/webroot/scss/Base/_config.scss
@@ -23,4 +23,4 @@
 	$success:         #5cb85c !default;
 	$info:            #52B3D9 !default;
 	$warning:         #F89406 !default;
-	$danger:          #C5201B !default;
+	$danger:          #D64541 !default;
