--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -4680,6 +4680,195 @@ table th[class*="col-"] {
   margin-left: 50px;
 }
 
+/* @area */
+/* line 2, ../scss/Module/_markdown.scss */
+.editor-area {
+  display: block;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow: auto;
+}
+
+/* @toolbar */
+/* line 12, ../scss/Module/_markdown.scss */
+.editor-toolbar {
+  display: block;
+  font-size: 14px;
+  line-height: 1.4285714285714286em;
+  zoom: 1;
+}
+
+/* line 18, ../scss/Module/_markdown.scss */
+.editor-toolbar:after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
+/* @toolbar button */
+/* line 25, ../scss/Module/_markdown.scss */
+.editor-toolbar-button {
+  display: block;
+  float: left;
+  color: #FFFFFF;
+  text-decoration: none;
+  text-align: center;
+  margin: 0 4px 4px 0;
+  background-color: #222222;
+  padding: 4px 19px;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+/* line 36, ../scss/Module/_markdown.scss */
+.editor-toolbar-button:hover {
+  color: #FF6814;
+}
+
+/* @toolbar separator */
+/* line 42, ../scss/Module/_markdown.scss */
+.editor-toolbar-separator {
+  display: block;
+  float: left;
+  width: 0;
+  height: 20px;
+  margin: 0 15px 4px 0;
+}
+
+/* @toolbar --bottom */
+/* line 52, ../scss/Module/_markdown.scss */
+.editor-area + .editor-toolbar .editor-toolbar-button,
+.editor-area + .editor-toolbar .editor-toolbar-separator {
+  margin: 4px 4px 0 0;
+}
+
+/* @custom drop */
+/* line 56, ../scss/Module/_markdown.scss */
+.custom-drop {
+  position: absolute;
+  top: -999999px;
+  left: -999999px;
+  width: 100px;
+  background-color: white;
+  color: black;
+  text-shadow: none;
+  -webkit-box-shadow: 0 1px 3px black;
+  -moz-box-shadow: 0 1px 3px black;
+  box-shadow: 0 1px 3px black;
+}
+
+/* @custom modal */
+/* line 70, ../scss/Module/_markdown.scss */
+.custom-modal-overlay {
+  position: fixed !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: #252525;
+  background-color: rgba(37, 37, 37, 0.4);
+}
+
+/* line 81, ../scss/Module/_markdown.scss */
+.custom-modal {
+  position: absolute;
+  top: -999999px;
+  left: -999999px;
+  width: 250px;
+  background-color: white;
+  color: black;
+  text-shadow: none;
+  padding: 10px;
+  -webkit-box-shadow: 0 1px 3px black;
+  -moz-box-shadow: 0 1px 3px black;
+  box-shadow: 0 1px 3px black;
+}
+
+/* line 94, ../scss/Module/_markdown.scss */
+.custom-modal-header {
+  margin: -10px -10px 0;
+  padding: 10px 10px 0;
+  font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: move;
+}
+
+/* line 103, ../scss/Module/_markdown.scss */
+.custom-modal-content {
+  margin: 10px 0;
+}
+
+/* line 104, ../scss/Module/_markdown.scss */
+.custom-modal-content input,
+.custom-modal-content select,
+.custom-modal-content textarea {
+  display: block;
+  width: 100%;
+  margin: 10px 0 0;
+  padding: 4px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  text-shadow: none;
+}
+
+/* line 116, ../scss/Module/_markdown.scss */
+.custom-modal-content .input {
+  display: block;
+  margin: 10px 0 0;
+}
+
+/* line 120, ../scss/Module/_markdown.scss */
+.custom-modal-content input:first-child,
+.custom-modal-content select:first-child,
+.custom-modal-content textarea:first-child,
+.custom-modal-content .input:first-child {
+  margin-top: 0;
+}
+
+/* line 124, ../scss/Module/_markdown.scss */
+.custom-modal-content input[type="checkbox"],
+.custom-modal-content input[type="radio"] {
+  display: inline-block;
+  width: auto;
+  margin: 0;
+}
+
+/* line 130, ../scss/Module/_markdown.scss */
+.custom-modal-action {
+  text-align: center;
+}
+
+/* line 131, ../scss/Module/_markdown.scss */
+.custom-modal-action button {
+  padding: 2px 6px;
+  cursor: pointer;
+}
+
+/* line 135, ../scss/Module/_markdown.scss */
+.custom-modal-action button::-moz-focus-inner {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+/* Uncomment the CSS below if you don't want to use icon fonts ... */
+/*
+.editor-toolbar-button {width:auto}
+.editor-toolbar-button i {display:none}
+.editor-toolbar-buton:after {
+  content:attr(title);
+  font-weight:bold;
+}
+*/
 /****************** PAGES *****************/
 /* line 1, ../scss/Pages/_home.scss */
 .home-header {
