--- a/webroot/scss/style.scss
+++ b/webroot/scss/style.scss
@@ -20,6 +20,7 @@
 @import "Module/_flash.scss";
 @import "Module/_emoji.scss";
 @import "Module/_paginate.scss";
+@import "Module/_markdown.scss";
 
 /****************** PAGES *****************/
 @import "Pages/_home.scss";
