--- a/webroot/scss/Module/_markdown.scss
+++ b/webroot/scss/Module/_markdown.scss
@@ -141,7 +141,12 @@
 blockquote{
   border-left: 3px solid rgb(255, 104, 20);
   line-height: 5px;
-  color: rgb(138, 138, 138);
+  color: darkgrey;
+  font-style: italic;
+}
+.posts .post-content p {
+  margin: 10px;
+  font-size: 16px!important;
 }
 
 /* Uncomment the CSS below if you don't want to use icon fonts ... */
