--- a/webroot/scss/Module/_form.scss
+++ b/webroot/scss/Module/_form.scss
@@ -9,3 +9,11 @@
         border: solid 1px $orange;
     }
 }
+
+
+.form-color{
+    width: 100%;
+    border: 0;
+    height: 40px;
+    outline:none;
+}
