--- a/webroot/scss/Base/_base.scss
+++ b/webroot/scss/Base/_base.scss
@@ -34,7 +34,6 @@ h1,h2,h3,h4,h5{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	padding-bottom: 13px;
-	//background-color: rgb(27, 28, 29);
 	padding-top: 10px;
 	color: rgb(27, 28, 29);
 }
@@ -46,4 +45,14 @@ h1,h2,h3,h4,h5{
 	font-weight: 300;
 }
 
+body::-webkit-scrollbar {
+	width: 8px;
+}
 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: $orange;
+}
