--- a/webroot/scss/Layout/_sidebar.scss
+++ b/webroot/scss/Layout/_sidebar.scss
@@ -1,119 +1,129 @@
 .sidebar--trigger{
-  display: inline;
-  height: inherit;
-  line-height: 50px;
-  cursor: pointer!important;
-
-  a{
+    display: inline;
+    height: inherit;
+    line-height: 50px;
     cursor: pointer!important;
-  }
+
+    a{
+        cursor: pointer!important;
+    }
 }
 
 .sidebar{
-  position: fixed;
-  top: 0px;
-  bottom: 0px;
-  right: -300px;
-  width: 300px;
-  z-index: 1000;
-  background-color: $black;
-  border-left: 3px solid #fff;
-  transition:0.4s;
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    right: -300px;
+    width: 300px;
+    z-index: 1000;
+    background-color: $black;
+    border-left: 3px solid #fff;
+    transition:0.4s;
 
-  &.sidebar-animation{
-    right:0!important;
-  }
-
-  .sidebar-close{
-    right: 0;
-    position: absolute;
-    padding: 5px 15px;
-    font-size: 23px;
-    cursor: pointer!important;
-
-    a{
-      cursor: pointer!important;
+    &.sidebar-animation{
+        right:0!important;
     }
-  }
 
-  .sidebar-avatar{
-    text-align: center;
-    margin-top: 30px;
-    color: $orange;
+    .sidebar-close{
+        right: 0;
+        position: absolute;
+        padding: 5px 15px;
+        font-size: 23px;
+        cursor: pointer!important;
 
-    img{
-      border-radius: 50%;
-    }
-    .sidebar-name{
-      text-align: center;
-      font-size: 35px;
-      font-weight: 200;
-    }
-  }
-  .sidebar-menu{
-    margin-top: 20px;
-    a{
-      text-transform: uppercase;
-      display: block;
-      border-top: solid 1px #888888;
-      letter-spacing: 2px;
-      height: 50px;
-      color: #CBCBCB;
-      line-height: 50px;
-      font-weight: 600;
-
-      text-align: center;
-
-      &:hover{
-        text-decoration: none;
-        background-color: #0C0C0C;
-        color: #fff;
-      }
-    }
-  }
-
-  .sidebar-footer{
-    bottom: 0;
-    width: 100%;
-    position: absolute;
-    font-weight: 500;
-    text-transform: uppercase;
-    .a-deco{
-      background-color: #C51F1F;
-      color: rgb(255, 255, 255);
-      text-align: center;
-      padding-top: 12px;
-      padding-bottom: 12px;
-
-      a{
-        color: #fff;
-
-        &:hover{
-          text-decoration: none;
+        a{
+            cursor: pointer!important;
         }
-      }
     }
 
-    .a-admin{
-      background-color: rgb(43, 44, 45);
-      color: #FFF;
-      text-align: center;
-      padding-top: 12px;
-      padding-bottom: 12px;
+    .sidebar-avatar{
+        text-align: center;
+        margin-top: 30px;
+        color: $orange;
 
-      a{
-        color: #fff;
-        &:hover{
-          text-decoration: none;
+        img{
+            border-radius: 50%;
         }
-      }
+        .sidebar-name{
+            text-align: center;
+            font-size: 35px;
+            font-weight: 200;
+        }
     }
-  }
+    .sidebar-menu{
+        margin-top: 20px;
+        a{
+            text-transform: uppercase;
+            display: block;
+            border-top: solid 1px #888888;
+            letter-spacing: 2px;
+            height: 50px;
+            color: #CBCBCB;
+            line-height: 50px;
+            font-weight: 600;
+
+            text-align: center;
+
+            &:hover{
+                text-decoration: none;
+                background-color: #0C0C0C;
+                color: #fff;
+            }
+        }
+    }
+
+    .sidebar-footer{
+        bottom: 0;
+        width: 100%;
+        position: absolute;
+        font-weight: 500;
+        text-transform: uppercase;
+        .a-deco{
+            background-color: #C51F1F;
+            color: rgb(255, 255, 255);
+            text-align: center;
+            padding-top: 12px;
+            padding-bottom: 12px;
+            border: 1px solid #888888;
+
+
+
+            a{
+                color: #fff;
+
+                &:hover{
+                    text-decoration: none!important;
+                }
+            }
+        }
+
+        .a-admin{
+            background-color: rgb(43, 44, 45);
+            color: #FFF;
+            text-align: center;
+            padding-top: 12px;
+            padding-bottom: 12px;
+            border: 1px solid #888888;
+
+
+
+            i{
+                color: $orange
+            }
+            a{
+                color: #fff;
+
+                &:hover{
+                    text-decoration: none!important;
+                }
+            }
+        }
+    }
 }
 
 .circle-new-message {
-  margin-top: 13px;
-  position: absolute;
-  left: 220px;
-  color: rgb(100, 216, 93);
+    margin-top: 13px;
+    position: absolute;
+    left: 220px;
+    color: rgb(100, 216, 93);
 }
