--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -593,6 +593,11 @@ footer p {
 }
 
 /* line 12, ../scss/Layout/_sidebar.scss */
+a:hover {
+  text-decoration: none;
+}
+
+/* line 16, ../scss/Layout/_sidebar.scss */
 .sidebar {
   position: fixed;
   top: 0px;
@@ -604,11 +609,11 @@ footer p {
   border-left: 3px solid #fff;
   transition: 0.4s;
 }
-/* line 23, ../scss/Layout/_sidebar.scss */
+/* line 27, ../scss/Layout/_sidebar.scss */
 .sidebar.sidebar-animation {
   right: 0 !important;
 }
-/* line 27, ../scss/Layout/_sidebar.scss */
+/* line 31, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-close {
   right: 0;
   position: absolute;
@@ -616,31 +621,35 @@ footer p {
   font-size: 23px;
   cursor: pointer !important;
 }
-/* line 34, ../scss/Layout/_sidebar.scss */
+/* line 38, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-close a {
   cursor: pointer !important;
 }
-/* line 39, ../scss/Layout/_sidebar.scss */
+/* line 43, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar {
   text-align: center;
   margin-top: 30px;
   color: #FF6814;
 }
-/* line 44, ../scss/Layout/_sidebar.scss */
+/* line 48, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar img {
   border-radius: 50%;
 }
-/* line 47, ../scss/Layout/_sidebar.scss */
+/* line 51, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar .sidebar-name {
   text-align: center;
   font-size: 35px;
   font-weight: 200;
 }
-/* line 53, ../scss/Layout/_sidebar.scss */
+/* line 57, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu {
   margin-top: 20px;
 }
-/* line 55, ../scss/Layout/_sidebar.scss */
+/* line 59, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-menu i {
+  color: #FF6814;
+}
+/* line 62, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a {
   text-transform: uppercase;
   display: block;
@@ -652,13 +661,13 @@ footer p {
   font-weight: 600;
   text-align: center;
 }
-/* line 67, ../scss/Layout/_sidebar.scss */
+/* line 74, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a:hover {
   text-decoration: none;
   background-color: #0C0C0C;
   color: #fff;
 }
-/* line 75, ../scss/Layout/_sidebar.scss */
+/* line 82, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer {
   bottom: 0;
   width: 100%;
@@ -666,45 +675,32 @@ footer p {
   font-weight: 500;
   text-transform: uppercase;
 }
-/* line 81, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-deco {
+/* line 84, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-footer .grid-6 {
+  border: solid 2px #888888;
+}
+/* line 92, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-footer .a {
   background-color: #C51F1F;
   color: white;
   text-align: center;
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 90, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-deco a {
-  color: #fff;
-}
-/* line 93, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-deco a:hover {
-  text-decoration: none !important;
-}
-/* line 99, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-admin {
-  background-color: #2b2c2d;
-  color: #FFF;
-  text-align: center;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  border: 1px solid #888888;
-}
-/* line 109, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-admin i {
+/* line 98, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-footer .a i {
   color: #FF6814;
 }
-/* line 112, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-admin a {
+/* line 101, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-footer .a a {
   color: #fff;
 }
-/* line 115, ../scss/Layout/_sidebar.scss */
-.sidebar .sidebar-footer .a-admin a:hover {
+/* line 104, ../scss/Layout/_sidebar.scss */
+.sidebar .sidebar-footer .a a:hover {
   text-decoration: none !important;
 }
 
-/* line 123, ../scss/Layout/_sidebar.scss */
+/* line 112, ../scss/Layout/_sidebar.scss */
 .circle-new-message {
   margin-top: 13px;
   position: absolute;
