--- a/webroot/scss/Layout/_sidebar.scss
+++ b/webroot/scss/Layout/_sidebar.scss
@@ -47,6 +47,8 @@ a{
 
         img{
             border-radius: 50%;
+            border: solid 2px #f3f3F3;
+            padding: 6px;
         }
         .sidebar-name{
             text-align: center;
