--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -492,51 +492,58 @@ img.scale, img.responsive {
   border-bottom: solid 3px rgba(0, 0, 0, 0.15);
 }
 /* line 8, ../scss/Layout/_header.scss */
+.menu img {
+  width: 40px;
+}
+/* line 12, ../scss/Layout/_header.scss */
 .menu nav {
   margin-top: 12px;
 }
-/* line 10, ../scss/Layout/_header.scss */
+/* line 14, ../scss/Layout/_header.scss */
 .menu nav li {
   list-style: none;
   display: inline-block;
 }
-/* line 14, ../scss/Layout/_header.scss */
+/* line 18, ../scss/Layout/_header.scss */
 .menu nav li a {
   text-decoration: none;
-  font-weight: 700;
   color: #808080;
   border: solid 2px transparent;
   padding: 10px 15px 10px 15px;
 }
-/* line 21, ../scss/Layout/_header.scss */
+/* line 24, ../scss/Layout/_header.scss */
 .menu nav li a:hover {
-  -moz-transition: 0.8s;
-  -o-transition: 0.8s;
-  -webkit-transition: 0.8s;
-  transition: 0.8s;
-  border: solid 2px #FF6814;
+  color: #4D5D5D;
+}
+/* line 28, ../scss/Layout/_header.scss */
+.menu nav li a:hover i {
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  color: #FF6814;
 }
 
 @media (max-width: 500px) {
-  /* line 32, ../scss/Layout/_header.scss */
+  /* line 40, ../scss/Layout/_header.scss */
   .menu .logo {
     width: 100%;
     text-align: center;
   }
-  /* line 36, ../scss/Layout/_header.scss */
+  /* line 44, ../scss/Layout/_header.scss */
   .menu .nav-center, .menu .right {
     width: 100% !important;
     text-align: center !important;
   }
-  /* line 40, ../scss/Layout/_header.scss */
+  /* line 48, ../scss/Layout/_header.scss */
   .menu nav {
     margin-top: -20px;
   }
-  /* line 44, ../scss/Layout/_header.scss */
+  /* line 52, ../scss/Layout/_header.scss */
   .menu nav li a {
     border: none;
   }
-  /* line 46, ../scss/Layout/_header.scss */
+  /* line 54, ../scss/Layout/_header.scss */
   .menu nav li a:hover {
     border: none;
     -moz-transition: 0.4s;
@@ -634,22 +641,24 @@ a:hover {
 /* line 48, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar img {
   border-radius: 50%;
+  border: solid 2px #f3f3F3;
+  padding: 6px;
 }
-/* line 51, ../scss/Layout/_sidebar.scss */
+/* line 53, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-avatar .sidebar-name {
   text-align: center;
   font-size: 35px;
   font-weight: 200;
 }
-/* line 57, ../scss/Layout/_sidebar.scss */
+/* line 59, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu {
   margin-top: 20px;
 }
-/* line 59, ../scss/Layout/_sidebar.scss */
+/* line 61, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu i {
   color: #FF6814;
 }
-/* line 62, ../scss/Layout/_sidebar.scss */
+/* line 64, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a {
   text-transform: uppercase;
   display: block;
@@ -661,13 +670,13 @@ a:hover {
   font-weight: 600;
   text-align: center;
 }
-/* line 74, ../scss/Layout/_sidebar.scss */
+/* line 76, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-menu a:hover {
   text-decoration: none;
   background-color: #0C0C0C;
   color: #fff;
 }
-/* line 82, ../scss/Layout/_sidebar.scss */
+/* line 84, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer {
   bottom: 0;
   width: 100%;
@@ -675,11 +684,11 @@ a:hover {
   font-weight: 500;
   text-transform: uppercase;
 }
-/* line 84, ../scss/Layout/_sidebar.scss */
+/* line 86, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .grid-6 {
   border: solid 2px #888888;
 }
-/* line 92, ../scss/Layout/_sidebar.scss */
+/* line 94, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a {
   background-color: #C51F1F;
   color: white;
@@ -687,20 +696,20 @@ a:hover {
   padding-top: 12px;
   padding-bottom: 12px;
 }
-/* line 98, ../scss/Layout/_sidebar.scss */
+/* line 100, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a i {
   color: #FF6814;
 }
-/* line 101, ../scss/Layout/_sidebar.scss */
+/* line 103, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a a {
   color: #fff;
 }
-/* line 104, ../scss/Layout/_sidebar.scss */
+/* line 106, ../scss/Layout/_sidebar.scss */
 .sidebar .sidebar-footer .a a:hover {
   text-decoration: none !important;
 }
 
-/* line 112, ../scss/Layout/_sidebar.scss */
+/* line 114, ../scss/Layout/_sidebar.scss */
 .circle-new-message {
   margin-top: 13px;
   position: absolute;
@@ -709,114 +718,6 @@ a:hover {
 }
 
 /****************** MODULE *****************/
-/* line 1, ../scss/Module/_modal.scss */
-.modal-overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  display: none;
-  left: 0;
-  background: rgba(0, 0, 0, 0.59);
-  z-index: 1;
-}
-
-/* line 13, ../scss/Module/_modal.scss */
-.modal {
-  background-color: #ccc;
-  margin: auto;
-  padding: 20px;
-  height: 50%;
-  box-sizing: border-box;
-  display: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  color: black;
-  background-color: white;
-  opacity: 0;
-  overflow: hidden;
-  border-top: solid 1px rgba(0, 0, 0, 0.15);
-  border-left: solid 1px rgba(0, 0, 0, 0.15);
-  border-right: solid 1px rgba(0, 0, 0, 0.15);
-  border-bottom: solid 3px rgba(0, 0, 0, 0.15);
-}
-/* line 30, ../scss/Module/_modal.scss */
-.modal > h2 {
-  margin-top: -15px;
-}
-/* line 30, ../scss/Module/_modal.scss */
-.modal > h2 .fa {
-  margin-right: 20px;
-}
-/* line 35, ../scss/Module/_modal.scss */
-.modal .container-fluid {
-  margin-top: 5px;
-}
-/* line 38, ../scss/Module/_modal.scss */
-.modal .container-fluid .alert {
-  border-left: solid 5px #D9D9D9;
-  margin-top: 10px;
-}
-/* line 42, ../scss/Module/_modal.scss */
-.modal .container-fluid .alert i {
-  color: #FF6814;
-}
-/* line 43, ../scss/Module/_modal.scss */
-.modal .container-fluid .alert strong {
-  color: #FF6814;
-}
-/* line 44, ../scss/Module/_modal.scss */
-.modal .container-fluid .alert p {
-  margin-top: 10px;
-}
-/* line 45, ../scss/Module/_modal.scss */
-.modal .container-fluid .alert a {
-  color: #FF6814;
-}
-
-/* line 54, ../scss/Module/_modal.scss */
-.modal.open {
-  display: block;
-  opacity: 1;
-  -webkit-transform: rotateX(0deg) scale(1);
-  transform: rotateX(0deg) scale(1);
-}
-
-/* line 61, ../scss/Module/_modal.scss */
-.modal .close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #808080;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 1;
-  text-decoration: none;
-}
-/* line 70, ../scss/Module/_modal.scss */
-.modal .close:active {
-  -moz-transition: 0.4s;
-  -o-transition: 0.4s;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  color: #FF6814;
-}
-
-@media (max-width: 600px) {
-  /* line 76, ../scss/Module/_modal.scss */
-  .modal {
-    height: 80%;
-    top: 70px;
-  }
-  /* line 79, ../scss/Module/_modal.scss */
-  .modal img {
-    width: 85px;
-  }
-}
 /* line 1, ../scss/Module/_form.scss */
 .form {
   width: 100%;
