--- a/webroot/scss/Layout/_header.scss
+++ b/webroot/scss/Layout/_header.scss
@@ -5,6 +5,10 @@
     margin:0;
     border-bottom: solid 3px rgba(0, 0, 0, 0.15);
 
+    img{
+        width: 40px;
+    }
+
     nav{
         margin-top: 12px;
         li{
@@ -13,14 +17,18 @@
 
             a{
                 text-decoration: none;
-                font-weight: 700;
                 color: #808080;
                 border: solid 2px transparent;
                 padding: 10px 15px 10px 15px;
 
                 &:hover{
-                    @include transition(0.8s);
-                    border: solid 2px $orange;
+                    //@include transition(0.8s);
+                    color: #4D5D5D;
+
+                    i{
+                       @include transition(0.4s);
+                        color: $orange;
+                    }
                 }
             }
         }
